--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -709,3 +709,50 @@ textarea {
     height: 50px;
     border-radius: 50%;
     background: rgba(59, 93, 80, 0.2); }
+
+.loadingIcon {
+    display: inline-block;
+    margin-right: 5px;
+}
+
+.buttonText {
+    display: inline;
+}
+
+/* 基本影片樣式 */
+#videoDiv {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow: hidden; /* 確保影片不會超出容器 */
+}
+
+#videoTag {
+  max-width: 100%;
+  height: 100%;
+  object-fit: contain; /* 使影片保持比例並完全顯示 */
+}
+
+/* 手機端調整 */
+@media (max-width: 768px) {
+  #videoTag {
+    max-width: 100%;
+    max-height: 50vh; /* 手機螢幕高度較小，可以調整為 50vh */
+  }
+}
+
+/* 桌機端 */
+@media (min-width: 768px) {
+  #videoTag {
+    max-height: 70vh; /* 高度限制在視窗高度的 70% */
+  }
+}
+
+/* 超大螢幕可以進一步限制影片寬度 */
+@media (min-width: 1200px) {
+  #videoTag {
+    max-width: 100%;
+  }
+}
